--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.anko_version='0.10.8'
     repositories {
         google()
         jcenter()
@@ -19,9 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url "https://repo.eclipse.org/content/repositories/paho-releases/"
-        }
+        maven { url "https://repo.eclipse.org/content/repositories/paho-releases/" }
+        maven { url 'https://jitpack.io' }
     }
 }
 
