--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AboutActivity" />
+        <activity android:name=".MainActivity" />
 
         <service android:name="org.eclipse.paho.android.service.MqttService" />
         <service android:name=".IQService" />
